force-app/main/default/objects/vlocity_cmt__OrchestrationDependency__c/vlocity_cmt__OrchestrationDependency__c.object-meta.xml
<CustomObject>
    <label>Orchestration Dependency</label>
    <nameField>
        <label>Orchestration Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>