force-app/main/default/objects/vlocity_cmt__OrchestrationDependency__c/fields/vlocity_cmt__DependsOnItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DependsOnItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Depends On</label>
    <referenceTo>vlocity_cmt__OrchestrationItem__c</referenceTo>
    <relationshipLabel>Orchestration Dependencies (Depends On)</relationshipLabel>
    <relationshipName>OrchestrationDependenciesDependsOn</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>