force-app/main/default/objects/vlocity_cmt__OrchestrationDependency__c/fields/vlocity_cmt__Order__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Order__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;   vlocity_cmt__DependsOnItemId__r.vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.Id,   vlocity_cmt__DependsOnItemId__r.vlocity_cmt__OrchestrationPlanId__r.vlocity_cmt__OrderId__r.OrderNumber   )</formula>
    <label>Order</label>
    <type>Text</type>
</CustomField>