force-app/main/default/objects/vlocity_cmt__OrchestrationDependency__c/fields/vlocity_cmt__Plan__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Plan__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  vlocity_cmt__DependsOnItemId__r.vlocity_cmt__OrchestrationPlanId__r.Id,   vlocity_cmt__DependsOnItemId__r.vlocity_cmt__OrchestrationPlanId__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan</label>
    <type>Text</type>
</CustomField>